--- a/apps/ng/src/index.html
+++ b/apps/ng/src/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="description" content="Adithya Vinjamoori, Frontend developer, Angular Developer, React Developer">
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-198375929-1"></script>
   <script>
